<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    >

    <ImageView
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:orientation="vertical"
        android:padding="8dp"
        android:background="@drawable/rounded_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/TxtConfirm"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/bellerose"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/TxtConfirmInforma"
            android:textStyle="bold"
            android:fontFamily="@font/bellerose"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_event_note_black_24dp"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/IdTxtTimeBooking"
                android:fontFamily="@font/bellerose"
                android:layout_marginStart="4dp"
                android:textSize="14sp"
                android:text="@string/Txttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_account_circle_black_24dp"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/IdTxtNameBooking"
                android:fontFamily="@font/bellerose"
                android:layout_marginStart="4dp"
                android:textSize="14sp"
                android:text="@string/TxtNameBooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <View
            android:layout_marginTop="4dp"
            android:background="@android:color/background_dark"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/IdTxtName_Salon"
            android:text="@string/TxtSalon1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/bellerose"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_web_black_24dp"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/IdTxtWebSite"
                android:fontFamily="@font/bellerose"
                android:layout_marginStart="4dp"
                android:textSize="14sp"
                android:text="@string/TxtWebSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_phone_black_24dp"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/IdTxtPhone"
                android:fontFamily="@font/bellerose"
                android:layout_marginStart="4dp"
                android:textSize="14sp"
                android:text="@string/TxtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_access_time_black_24dp"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/IdTxtOpenTime"
                android:fontFamily="@font/bellerose"
                android:layout_marginStart="4dp"
                android:textSize="14sp"
                android:text="@string/TxtOpenTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_location_on_black_24dp"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/IdTxtLocation"
                android:fontFamily="@font/bellerose"
                android:layout_marginStart="4dp"
                android:textSize="14sp"
                android:text="@string/TxtLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <Button
            android:id="@+id/IdBtnConfirmar"
            android:text="@string/btnConfirm"
            android:background="@color/colorBtnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:fontFamily="@font/bellerose"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>
</LinearLayout>