<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/HomeBackground"
    android:orientation="vertical"
    tools:context=".Fragments.HomeFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/Id_layout_user_information"
        android:background="@color/colorBtnLogin"
        android:visibility="gone"
        android:weightSum="4"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


      <ImageView
          android:src="@drawable/ic_account_circle_white_24dp"
          android:layout_width="60dp"
          android:layout_height="60dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
            android:id="@+id/IdTxtUserName"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:text="@string/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

            <TextView
                android:id="@+id/IdTxtMemberType"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:text="@string/txtMemberType"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>

    </LinearLayout>

   <LinearLayout
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <LinearLayout
           android:orientation="horizontal"
           android:weightSum="4"
           android:padding="8dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <androidx.cardview.widget.CardView
               android:id="@+id/Id_cardview_booking"
               android:layout_marginEnd="8dp"
               app:cardCornerRadius="8dp"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content">

               <LinearLayout
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <ImageView
                       android:layout_width="50dp"
                       android:layout_height="45dp"
                       android:layout_gravity="center_horizontal"
                       android:src="@drawable/ic_event_note_black_24dp" />

                   <TextView
                       android:text="@string/txtBooking"
                       android:layout_gravity="center_horizontal"
                       android:textSize="@dimen/textCarsize"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />

               </LinearLayout>

           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:id="@+id/Id_cardview_Cart"
               android:layout_marginEnd="8dp"
               app:cardCornerRadius="8dp"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content">

               <RelativeLayout
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <com.nex3z.notificationbadge.NotificationBadge
                       android:id="@+id/IdNotificationBadge"
                       android:layout_toEndOf="@+id/IdTxtCartTitle"
                       android:layout_width="30dp"
                       android:layout_height="30dp"
                       app:nbMaxTextLength="2"
                       />

                   <ImageView
                       android:id="@+id/IdCartItem"
                       android:src="@drawable/ic_shopping_cart_black_24dp"
                       android:layout_width="50dp"
                       android:layout_centerHorizontal="true"
                       android:layout_gravity="center_horizontal"
                       android:layout_height="50dp" />

                   <TextView
                       android:id="@+id/IdTxtCartTitle"
                       android:layout_below="@+id/IdCartItem"
                       android:text="@string/txtShoping"
                       android:layout_gravity="center_horizontal"
                       android:layout_centerHorizontal="true"
                       android:textSize="@dimen/textCarsize"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />

               </RelativeLayout>

           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:id="@+id/Id_cardview_history"
               android:layout_marginEnd="8dp"
               app:cardCornerRadius="8dp"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content">

               <LinearLayout
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <ImageView
                       android:src="@drawable/ic_history_black_24dp"
                       android:layout_width="50dp"
                       android:layout_gravity="center_horizontal"
                       android:layout_height="50dp" />

                   <TextView
                       android:text="@string/txtHistory"
                       android:layout_gravity="center_horizontal"
                       android:textSize="@dimen/textCarsize"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />

               </LinearLayout>

           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:id="@+id/Id_cardview_notification"
               android:layout_marginEnd="8dp"
               app:cardCornerRadius="8dp"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content">

               <LinearLayout
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <ImageView
                       android:src="@drawable/ic_notifications_black_24dp"
                       android:layout_width="50dp"
                       android:layout_gravity="center_horizontal"
                       android:layout_height="50dp" />

                   <TextView
                       android:text="@string/txtNotification"
                       android:layout_gravity="center_horizontal"
                       android:textSize="@dimen/textCarsize"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />

               </LinearLayout>

           </androidx.cardview.widget.CardView>



       </LinearLayout>

       <androidx.cardview.widget.CardView
           android:id="@+id/IdCardBookingInfo"
           app:cardCornerRadius="8dp"
           android:visibility="gone"
           android:layout_marginStart="8dp"
           android:layout_marginEnd="8dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <LinearLayout
               android:padding="8dp"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <LinearLayout
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <ImageView
                       android:src="@drawable/ic_event_note_black_24dp"
                       android:layout_gravity="center_vertical"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />

                   <TextView
                       android:text="@string/txtInformation"
                       android:textSize="18sp"
                       android:textStyle="bold"
                       android:layout_marginStart="8dp"
                       android:layout_gravity="center_vertical"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content" />

               </LinearLayout>

               <LinearLayout
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <TextView
                       android:text="@string/address_builler"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />

                   <TextView
                       android:id="@+id/IdAddressSalon"
                       android:text="@string/addresSalon"
                       android:textStyle="bold"
                       android:layout_marginStart="5dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />


               </LinearLayout>

               <LinearLayout
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <TextView
                       android:text="@string/time_builler"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />

                   <TextView
                       android:id="@+id/IdTimeSalon"
                       android:text="@string/TimeSalon"
                       android:textStyle="bold"
                       android:layout_marginStart="5dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />


               </LinearLayout>

               <LinearLayout
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <TextView
                       android:text="@string/StyleList_builler"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />

                   <TextView
                       android:id="@+id/IdStyleListSalon"
                       android:text="@string/StyleList"
                       android:textStyle="bold"
                       android:layout_marginStart="5dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />


               </LinearLayout>

               <LinearLayout
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <TextView
                       android:text="@string/builler"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />

                   <TextView
                       android:id="@+id/IdBuillet"
                       android:text="@string/Builet"
                       android:textStyle="bold"
                       android:layout_marginStart="5dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />


               </LinearLayout>

           </LinearLayout>


       </androidx.cardview.widget.CardView>

   </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ss.com.bannerslider.Slider
            android:id="@+id/IdBannerSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

            <RelativeLayout
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/bellerose"
                    android:text="@string/LookBook"
                    android:textColor="@color/colorBtnLogin"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </RelativeLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/IdRecycler_Look_Book"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>



</LinearLayout>