<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".Fragments.ShopingFragment">

    <View
        android:background="@android:color/background_dark"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/Id_ChipGroup"
        android:paddingTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.Chip
            android:id="@+id/IdChipWax"
            app:chipBackgroundColor="@android:color/holo_orange_dark"
            android:textColor="@android:color/black"
            android:text="@string/txtChipWax"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.chip.Chip
            android:id="@+id/IdChipSpray"
            app:chipBackgroundColor="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:text="@string/txtChipSpray"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.chip.Chip
            android:id="@+id/IdChipHairCare"
            app:chipBackgroundColor="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:text="@string/txtChipHairCare"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.chip.Chip
            android:id="@+id/IdChipBodyCare"
            app:chipBackgroundColor="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:text="@string/txtChipBodyCare"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </com.google.android.material.chip.ChipGroup>

    <View
        android:background="@android:color/background_dark"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/IdRecyclerShoping"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



</LinearLayout>
